[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=5]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2147483652
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="Hitbox" parent="." instance=ExtResource( 3 )]

[node name="AttackRate" type="Timer" parent="."]
one_shot = true

[node name="AttackPosition" type="Position2D" parent="."]

[node name="HitboxRate" type="Timer" parent="."]
one_shot = true

[node name="changeDirection" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttackRate" to="." method="_on_AttackRate_timeout"]
[connection signal="timeout" from="HitboxRate" to="." method="_on_HitboxRate_timeout"]
[connection signal="timeout" from="changeDirection" to="." method="_on_changeDirection_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
